- DiaryEntryService: improved upon logic for retrieving a specific diary entry, in order to fix bug where emotions were missing for some entries - DiaryController, login.html, fragments.html: minor adjustments (code readability, minor UI changes)